--- a/crates/client-websocket/Cargo.toml
+++ b/crates/client-websocket/Cargo.toml
@@ -10,7 +10,7 @@ futures = "0.3.16"
 eyre = "0.6.5"
 serde_cbor = "0.11.1"
 tracing = "0.1.26"
-cross-websocket = "0.1.3"
+cross-websocket = {git = "https://github.com/alanpoon/bevy_wasmcloud_lib"}
 futures-lite = "1.12.0"
 pharos = "0.5.2"
 ws_stream_wasm = { version = "0.7.3" }
